Bug 1127882 - Fix Promise include.